--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "jose": "^5.0.1",
     "next": "14.0.0",
     "nextjs-toploader": "^1.5.3",
+    "quill": "^1.3.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-quill": "^2.0.0",
+    "react-quilljs": "^1.3.3"
   },
   "devDependencies": {
     "autoprefixer": "^10",
