--- a/.env
+++ b/.env
@@ -6,12 +6,12 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://avnadmin:AVNS_wss8a0NdHqJ48XJsm7s@mysql-2bdda505-newstimes24.a.aivencloud.com:21472/nextagency?ssl-mode=REQUIRED"
+DATABASE_URL="mysql://teamsaro_ahnaf:Ahnaf6380@49.12.80.157/teamsaro_next-agency"
 
-# jwt
+
 JWT_SECRET=ghdglahkf23gd1-gdf54-2gdgd
 JWT_ISSUER=localhost.com
 JWT_EXPIRE=2h
 
-# base url
-NEXT_PUBLIC_BASE_URL=http://localhost:3000
+
+NEXT_PUBLIC_BASE_URL=https://localhost:3000
